fix: add border to overflow to match figma

--- a/src/common/scss/menu-item.scss
+++ b/src/common/scss/menu-item.scss
@@ -260,7 +260,10 @@
   &:focus-within,
   &:focus-visible {
     outline: 2px solid var(--kd-color-border-variants-destructive);
-    background-color: var(--kd-color-status-error-accent);
+    background-color: var(
+      --kd-color-background-button-primary-destructive-focused
+    );
+    color: var(--kd-color-text-level-light);
 
     .menu-item-inner-el {
       color: var(--kd-color-text-level-light);
